--- a/index.html
+++ b/index.html
@@ -15,32 +15,33 @@
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    ROT3 Cipher
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <input type="text" id="rot3InputText" placeholder="Enter text">
-                    <button onclick="processROT3('encode')">Encode</button>
-                    <button onclick="processROT3('decode')">Decode</button>
-                    <div id="rot3Result"></div>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                     Vigenère Cipher
                 </button>
             </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <input type="text" id="vigenereInputText" placeholder="Enter text">
                     <input type="text" id="vigenereKeyText" placeholder="Enter key">
                     <button onclick="processVigenere('encode')">Encode</button>
                     <button onclick="processVigenere('decode')">Decode</button>
                     <div id="vigenereResult"></div>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Autokey Cipher
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <input type="text" id="autokeyInputText" placeholder="Enter text">
+                    <input type="text" id="autokeyKeyText" placeholder="Enter key">
+                    <button onclick="processAutokey('encode')">Encode</button>
+                    <button onclick="processAutokey('decode')">Decode</button>
+                    <div id="autokeyResult"></div>
                 </div>
             </div>
         </div>
